# solutis-sync

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: pylint.yml  tag-on-push.yml
src/: __init__.py  main.py
src/api/: __init__.py  deps.py  routes.py
src/api/v1/: __init__.py  routes.py
src/core/: __init__.py  checksums.py  config.py  database.py  logging.py  scheduler.py
src/models/: __init__.py  mysql_models.py
src/repositories/: __init__.py  mysql_writers.py  protocols.py  totvs_queries.py  totvs_readers.py
src/schemas/: __init__.py  entities.py
src/services/: __init__.py  delete_orphan_assets.py  sync_use_case.py
