[project]
name = "solutis-sync"
version = "0.1.0"
description = "Microservice – TOTVS ↔ MySQL data synchronisation"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "apscheduler>=3.11,<4",
    "sqlmodel>=0.0.22,<1",
    "aiomysql>=0.2.0,<1",
    "aioodbc>=0.5.0,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "loguru>=0.7,<1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.28,<1",
    "pre-commit>=4.0.0,<5",
]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "S", "B", "A", "RUF"]

[tool.pyrefly]
source = ["src"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
